    - bugzilla 19558: save all files with compile and run/debug/disassemble
    - fix reading options from vcxproj with compile and run/debug/disassemble
    - bugzilla 19726: VC project using LDC now adds C runtime to linker dependencies
  * dparser
    - catch up with recent language changes: 
      - contract expressions
      - traits can appear everywhere a type can be declared
      - allow @UDA for enumerator values
    - parse __vector and __parameters in IsExpression, evaluate __vector
    - fix parsing character literals with surrogate pairs
    - fix tooltips showing storage classes as type constructors
    - fixed crash with "static foreach"
  * debugger
    - bugzilla 18889: do not forward tooltip to debugger if hovering compile time identifier (type/enum)
  * editor
    - tweaked default colors to better work with dark mode (restart VS and Visual D twice after switch
      between light and dark modes)

2019-04-21 Version 0.49.1
  * fixed reading settings from VC projects in VS2017
  * fixed determining versions from dmd versions no longer supporting -gc
  * fixed reading import path from newer LDC versions
  * added support for VS2019 Update 16.1
  * dparser:
    - jump to original definition if it is not renamed or the caret is on the import
    - fixed import lookup if module name is also a package
    - fixed stack overflows with static foreach
    - fixed infinite loop for cyclic base classes
    - fixed more crashes during semantic highlighting

2019-04-28 Version 0.49.2
  * VS2013/VS2015: VC projects broken in 0.49.1 due to unsupported msbuild variable
  * visualdproj: fixed additional options not passed to single file compilation
  * VS2015: workaround VS not correctly updating extension caches after uninstallation
  * bugzilla 19826: visualdproj projects created for LDC still use DMD

unreleased Version 0.50.0
  * VS 16.1 Preview 2: ignore tracked files in *.delete.*.tlog as dependencies, too